Implement API for Schema
