# src/Api/DTOs/Requests/Schemas/UpdateSchemaRequest.cs
@@ -1,0 +1,1 @@
+public record UpdateSchemaRequest(string Name);
